added live video in index page

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,11 +1,16 @@
 <html>
   <head>
+    <video autoplay></video>
 
+    <script>
+   
+    </script>
   </head>
   <body>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io('http://localhost:3000');
+      // var socket = io('http://localhost:3000');
     </script>
+    <script src="/static/js/index.js"></script>
   </body>
 </html>
