--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -13,5 +13,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/index.js"></script>
+    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
   </body>
 </html>
