displayed all friends on home poage

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -2,14 +2,11 @@
   <head>
   </head>
   <body>
-    <li id="messages">
-      
-    </li>
-
-    <div style="position:fixed;bottom:0">
-      <input id="inputMsg"></input>
-      <button id="sendMsgBtn">Send</button>
-    </div>
+    <% for(var i=0;i<friends_row.length;i++){ %>
+      <% var friend = friends_row[0].myfriend %>
+      <div><%= friend.username +"   "+friend.email +"   "+friend.id %></div>
+      <a href="<%= '/chat/' + friend.username %>">friend.username</a>  
+    <% } %>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/index.js"></script>
