--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -31,7 +31,7 @@
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
           
-      <div style="align-text:center;margin-bottom:10px;margin-top:15px"> Don't have an account? <a href='/registration'>Sign up</a></div>
+      <div style="align-text:center;margin-bottom:10px;margin-top:15px"> Don't have an account? <a href='/register'>Sign up</a></div>
     
   </form>
 </div>
