--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,15 +1,99 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <% for(var i=0;i<friends_row.length;i++){ %>
-      <% var friend = friends_row[i].myfriend %>
-      <div><%= friend.username +"   "+friend.email +"   "+friend.id %></div>
-      <a href="<%= '/chat/' + friend.username %>"><%= friend.username %></a>  
-    <% } %>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="online note pad">
+        <meta name="author" content="siddartha boddu">
+    
+        <title>Message</title>
+    
+      <!-- jQuery library -->
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    <script src="/socket.io/socket.io.js"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" rel="stylesheet" crossorigin="anonymous">
+      <link rel="stylesheet" href="/static/css/header.css">
+    
+    </head>
+
+    
+  <body style="width:100%;    background-color: #F6F8FA;" >
+
+          <% include ../partials/header %>
+
+    <div class="" style="width:100%;font-size:14px" >
+      <div class="row" style="width:100%">
+
+        <div class="col-lg-2 col-xl-2 d-none d-lg-block" style="padding-left: 0px;border-right:1px solid #e1e4e8!important;padding-right:0px">
+          <div class="leftpane" >
+
+
+          </div>
+        </div>
+
+        <div class="col-lg-8 col-xl-8 col- middlepane col-md-8 col-xs-8">
+
+        </div>
+
+        <div class="col-lg-2 col-xl-2 rightpane col-md-4 col-xs-4">
+          <div >
+
+            <div class="text-bold f5">
+              Friends
+            </div>
+
+            <div>
+              <% for(var i=0;i<friends_row.length;i++){ %>
+                <% var friend = friends_row[i].myfriend %>
+                <!-- <div><%= friend.username +"   "+friend.email +"   "+friend.id %></div> -->
+                <a href="<%= '/chat/' + friend.username %>"><%= friend.username %></a>  
+              <% } %>
+            </div>
+            
+          </div>
+          
+        </div>
+
+      </div>
+    </div>
+    
+    
+
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/index.js"></script>
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <style>
+      .leftpane {
+        height: 100%;
+        /* background-color: green; */
+        background-color: #FFFFFF;
+        padding-top:15px;
+        
+      }
+
+      .middlepane {
+        height: 100%;
+
+          /* background-color: blue; */
+        background-color: #F6F8FA;
+        padding-top:15px;
+
+      }
+
+      .rightpane {
+        height: 100%;
+
+        /* background-color: black; */
+        background-color: #F6F8FA;
+        padding-top:15px;
+
+      }
+    </style>
   </body>
 </html>
