--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -45,7 +45,7 @@
           <div >
 
             <div class="text-bold f5">
-              Friends
+              Friends ( <%= friends_row.length %> )
             </div>
 
             <div>
