--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,8 +35,8 @@
 </nav>
    -->
 
-   <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom:0px;background-color: #24292E !important">
-  <form class="form-inline" style="margin-bottom:0px">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom:0px;background-color: #24292E !important">
+  <form class="form-inline" style="margin-bottom:0px" action="/search" type="get">
     <div class="input-group">
       <div class="input-group-prepend" style="width:300px">
         <span class="input-group-text">@</span>
