--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,3 +7,23 @@ body {
 .f5 {
   font-size: 16px!important;
 }
+.image-cropper {
+  width: 150px;
+  height: 150px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+img {
+  display: inline;
+  margin: 0 auto;
+  height: 100%;
+  width: auto;
+}
+
+#status{
+  text-align: center;
+  font-style: italic;
+}
