--- a/public/css/header.css
+++ b/public/css/header.css
@@ -14,11 +14,13 @@ body {
   overflow: hidden;
   border-radius: 50%;
   margin: 0 auto;
+  text-align: center;
 }
 
 img {
   display: inline;
   margin: 0 auto;
+  margin-left: -25%;
   height: 100%;
   width: auto;
 }
