--- a/views/home/user.ejs
+++ b/views/home/user.ejs
@@ -32,7 +32,7 @@
 
         <div id="userprofile" class="" style="width:60%;margin:0 auto;background-color:white;border: 1px solid #e1e4e8;padding:15px 0px 15px 0px">    
           <div class="image-cropper" style="margin:0 auto">
-            <img src="http://3.bp.blogspot.com/-cBTxqyiPXv4/U2pOt-m2CYI/AAAAAAAAANU/tLLH_hD6BD8/s1600/HD+Wallpapers+-+wallpaper+hd+1080p,+wallpaper+hd+download,+wallpaper+hd+iphone+5,+wallpaper+hd+for+mobile,+wallpaper+hd+app,+wallpaper+hd+cars,+iphone+4+wallpaper+hd,+ipad+wallpape.jpg" class="rounded" />
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj5GtJ1ndkXb1l4QSGefsh4DRrW7VHFNNBZI6wqXrU8kDmJxex" class="rounded" />
           </div>
           <br>
           <div class="text-bold" style="text-align: center;margin:0 auto">
