--- a/views/home/user.ejs
+++ b/views/home/user.ejs
@@ -42,7 +42,7 @@
             <div><%= user.email %></div>
           </div>        
           <div id="status" style="border-bottom:1px solid #e1e4e8!important;padding:0% 5% 15px 5%;margin:0 auto;width:95%">
-            <div><%= user.status %><%= user.status %></div>
+            <div><%= user.status %></div>
           </div>
           <div id="posts_friends_count" class="row"  style="margin-top:15px">
             <div id="posts_count" style="width:30%;margin-left:20%;text-align: center">
