--- a/views/home/user.ejs
+++ b/views/home/user.ejs
@@ -46,10 +46,10 @@
           </div>
           <div id="posts_friends_count" class="row"  style="margin-top:15px">
             <div id="posts_count" style="width:30%;margin-left:20%;text-align: center">
-              <h4>1</h4> 
+              <h4><%= posts.length %></h4> 
             </div>
             <div id="friends_count" style="width:30%;text-align: center">
-              <h4>2</h4> 
+              <h4><%= friends_row.length %></h4> 
             </div>
           </div>
           <div id="posts_friends_count" class="row">
