--- a/views/home/user.ejs
+++ b/views/home/user.ejs
@@ -30,7 +30,7 @@
     <div class="" style="width:100%;font-size:14px;margin-top:40px" >
       <div class="row" style="width:100%;margin-left:0px;">
 
-        <div id="userprofile" class="" style="width:60%;margin:0 auto;background-color:white;border: 1px solid #e1e4e8;padding:15px 0px 15px 0px">    
+        <div id="userprofile" class="" style="width:60%;margin:0 auto;background-color:white;border: 1px solid #e1e4e8;padding:15px 0px 15px 0px;margin-bottom:20px">    
           <div class="image-cropper" style="margin:0 auto">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj5GtJ1ndkXb1l4QSGefsh4DRrW7VHFNNBZI6wqXrU8kDmJxex" class="rounded" />
           </div>
@@ -62,53 +62,16 @@
           </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- <div class="col-lg-2 col-xl-2 d-none d-lg-block" style="padding-left: 0px;border-right:1px solid #e1e4e8!important;padding-right:0px">
-          <div class="leftpane" >
-
-
+        <% for(var i=0;i<posts.length;i=i+1) {%>
+          <% var post = posts[i] %>
+          <div id="userprofile" class="" style="width:60%;margin:10 auto;background-color:white;border: 1px solid #e1e4e8;padding:15px 15px 15px 15px;">    
+           <div style="font-weight: 600"><%= user.username %></div>
+           <div style="font-size:10px"><%= post.createdAt.toLocaleString() %></div>
+           <h4 style="margin-bottom:0px;margin-top:5px"><%= post.title %></h4>
+           <div><%= post.content %></div>
           </div>
-        </div>
-
-        <div class="col-lg-8 col-xl-8 col- middlepane col-md-8 col-xs-8">
-
-        </div>
-
-        <div class="col-lg-2 col-xl-2 rightpane col-md-4 col-xs-4">
-          <div >
-
-            <div class="text-bold f5">
-              Friends ( <%= friends_row.length %> )
-            </div>
-
-            <div>
-              <% for(var i=0;i<friends_row.length;i++){ %>
-                <% var friend = friends_row[i].myfriend %>
-
-                <div>
-                  <a href="<%= '/chat/' + friend.username %>"><%= friend.username %></a>  
-                </div>  
-                            
-              <% } %>
-            </div>
-            
-          </div>
-          
-        </div> -->
-
+        
+          <% } %>
       </div>
     </div>
     
