--- a/public/css/header.css
+++ b/public/css/header.css
@@ -29,3 +29,8 @@ img {
   text-align: center;
   font-style: italic;
 }
+
+button:hover{
+  background-color:black !important;
+  color: whitesmoke;
+}
