--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -25,7 +25,7 @@
     
   <body style="width:100%;    background-color: #F6F8FA;" >
 
-          <% include ../partials/header %>
+      <%- include('./../partials/header',{user: user}) %>
 
     <div class="" style="width:100%;font-size:14px" >
       <div class="row" style="width:100%">
