--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,48 +1,35 @@
-<!-- <nav class="navbar navbar-default" role="navigation" style="background-color: #24292E;height:7%;width:100%">
-  <div class="container-fluid">
-    
-    <div class="navbar-header">
-        <a class="navbar-brand" href="#"; style="">
-            <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span> 
-            <form action="/search" method="get" style="background-color: #3F4448;width:300px;height:30px;border-radius: 5px">
-              <input type="text" name="user_details" class="searchFriend" placeholder="Search a user" style="background-color: #3F4448;font-size:13px;color:white;border:1px solid #3F4448;;border-radius: 5px;height:30px;width:300px">
-            </form>
-        </a>
 
-        <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-             <li><a href="/about">About</a></li>
-        </ul>
-    </div>
-    
-  </div>
-</nav> -->
 
-<!-- <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <form class="form-inline" action="/search" type="get">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-success" type="submit">Search</button>
-    </form>
-    <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link 2</a>
-        </li>
-      </ul>
-    
-</nav>
-   -->
-
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom:0px;background-color: #24292E !important">
+<nav class="navbar navbar-expand-sm  navbar-dark" style="margin-bottom:0px;background-color: #343a40 ">
   <form class="form-inline" style="margin-bottom:0px" action="/search" type="get">
     <div class="input-group">
       <div class="input-group-prepend" style="width:300px">
         <span class="input-group-text">@</span>
         <input type="text" class="form-control" placeholder="Username" style="width:300px">
       </div>
-      
-    </div>    
+
+    </div> 
+
   </form>
+  <div class = "row" style="color:white;position: absolute;right: 10px;font-size: 17px;margin-right:15px">
+      
+      <button class="headerbtn" style="border-radius: 4px;background-color:#343a40;border: 0px;padding:0 10px 0 10px;margin-right:20px" onclick="window.location = '/user/test' ">
+        <!-- <div class="row"> -->
+          <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xl-6" style="padding-right:0px"> -->
+              <!-- <div class="image-cropper" style="margin:0 auto;height:30px;width:30px;margin-left:10px;margin-right:0px"> -->
+                  <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj5GtJ1ndkXb1l4QSGefsh4DRrW7VHFNNBZI6wqXrU8kDmJxex" class="rounded" /> -->
+              <!-- </div> -->
+          <!-- </div> -->
+          <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xl-6" style="margin: auto 0;"> -->
+              <%= user.username %>
+              <!-- Siddartha -->
+          <!-- </div> -->
+        <!-- </div> -->
+       
+        <!-- <span>Siddartha</span> -->
+      </button>
+      <div class="row">
+      <button class="headerbtn" style="border-radius: 4px;background-color:#343a40;border: 0px;margin-left:0px;padding:0 10px 0 10px;" onclick="window.location = '/' ">Home</button>
+      </div>
+    </div>   
 </nav>
