--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,20 +13,8 @@
   </form>
   <div class = "row" style="color:white;position: absolute;right: 10px;font-size: 17px;margin-right:15px">
       
-      <button class="headerbtn" style="border-radius: 4px;background-color:#343a40;border: 0px;padding:0 10px 0 10px;margin-right:20px" onclick="window.location = '/user/test' ">
-        <!-- <div class="row"> -->
-          <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xl-6" style="padding-right:0px"> -->
-              <!-- <div class="image-cropper" style="margin:0 auto;height:30px;width:30px;margin-left:10px;margin-right:0px"> -->
-                  <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj5GtJ1ndkXb1l4QSGefsh4DRrW7VHFNNBZI6wqXrU8kDmJxex" class="rounded" /> -->
-              <!-- </div> -->
-          <!-- </div> -->
-          <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xl-6" style="margin: auto 0;"> -->
-              <%= user.username %>
-              <!-- Siddartha -->
-          <!-- </div> -->
-        <!-- </div> -->
-       
-        <!-- <span>Siddartha</span> -->
+      <button class="headerbtn" style="border-radius: 4px;background-color:#343a40;border: 0px;padding:0 10px 0 10px;margin-right:20px" onclick="window.location = '<%= '/user/'+user.username %>' ">
+        <%= user.username %>
       </button>
       <div class="row">
       <button class="headerbtn" style="border-radius: 4px;background-color:#343a40;border: 0px;margin-left:0px;padding:0 10px 0 10px;" onclick="window.location = '/' ">Home</button>
