--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -51,6 +51,10 @@
               </div>
             </form>
           </div>
+
+          <div id="userPostsList" style="">
+
+          </div>
           
         </div>
 
@@ -82,6 +86,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/index.js"></script>
+    <script src="/static/js/home_posts.js"></script>
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <style>
       .leftpane {
