--- a/views/home/user.ejs
+++ b/views/home/user.ejs
@@ -66,30 +66,9 @@
             <% } %>
           </div>
         </div>
+        <div id="userPostsList" style="">
 
-        <% for(var i=0;i<posts.length;i=i+1) {%>
-          <% var post = posts[i] %>
-          <div id="userprofile" class="" style="width:60%;margin:10 auto;background-color:white;border: 1px solid #e1e4e8;padding:15px 15px 15px 15px;">    
-            <div class="row" style="margin-bottom:15px">
-              <div>
-                  <div class="image-cropper" style="margin:0 auto;height:40px;width:40px;margin-left:10px;margin-right:10px">
-                      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj5GtJ1ndkXb1l4QSGefsh4DRrW7VHFNNBZI6wqXrU8kDmJxex" class="rounded" />
-                  </div>
-              </div>
-                
-              <div>
-                  <div style="font-weight: 600"><%= user.username %></div>
-                  <div style="font-size:10px"><%= post.createdAt.toLocaleString() %></div>
-              </div>
-                
-            </div>
-            
-           
-           <h4 style="margin-bottom:0px;margin-top:5px;font-weight: 550 !important"><%= post.title %></h4>
-           <div><%= post.content %></div>
-          </div>
-        
-          <% } %>
+        </div>
       </div>
     </div>
     
@@ -97,6 +76,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/index.js"></script>
+    <script src="/static/js/user_profile.js"></script>
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <style>
       .leftpane {
