--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <div class="input-group">
       <div class="input-group-prepend" style="width:300px">
         <span class="input-group-text">@</span>
-        <input type="text" class="form-control" placeholder="Username" style="width:300px">
+        <input type="text" class="form-control" placeholder="Username" name="keyword" style="width:300px">
       </div>
 
     </div> 
