--- a/public/css/header.css
+++ b/public/css/header.css
@@ -34,3 +34,8 @@ button:hover{
   background-color:black !important;
   color: whitesmoke;
 }
+
+
+.commentSection input:focus {
+  outline:none !important;
+}
