redesigned chat page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,23 +1,22 @@
 
 
-<nav class="navbar navbar-expand-sm  navbar-dark" style="margin-bottom:0px;background-color: #343a40 ">
+<nav class="navbar navbar-expand-sm  navbar-dark" style="margin-bottom:0px;background-color: #343a40;padding-top: 5px;padding-bottom: 5px">
   <form class="form-inline" style="margin-bottom:0px" action="/search" type="get">
-    <div class="input-group">
-      <div class="input-group-prepend" style="width:300px">
+    <div class="input-group" id="usersearchboddu" style="width:300px;height:25px">
+      <div class="input-group-prepend" style="width:300px;height:25px">
         <span class="input-group-text">@</span>
-        <input type="text" class="form-control" placeholder="Username" name="keyword" style="width:300px">
+        <input id="usersearch" type="text" class="form-control" placeholder="Username" name="keyword" style="width:300px;height:25px">
       </div>
-
     </div> 
 
   </form>
   <div class = "row" style="color:white;position: absolute;right: 10px;font-size: 17px;margin-right:15px">
       
-      <button class="headerbtn" style="border-radius: 4px;background-color:#343a40;border: 0px;padding:0 10px 0 10px;margin-right:20px" onclick="window.location = '<%= '/user/'+user.username %>' ">
+      <button class="headerbtn" style="color:white;border-radius: 4px;background-color:#343a40;border: 0px;padding:0 10px 0 10px;margin-right:20px" onclick="window.location = '<%= '/user/'+user.username %>' ">
         <%= user.username %>
       </button>
       <div class="row">
-      <button class="headerbtn" style="border-radius: 4px;background-color:#343a40;border: 0px;margin-left:0px;padding:0 10px 0 10px;" onclick="window.location = '/' ">Home</button>
+      <button class="headerbtn" style="color:white;border-radius: 4px;background-color:#343a40;border: 0px;margin-left:0px;padding:0 10px 0 10px;" onclick="window.location = '/' ">Home</button>
       </div>
     </div>   
 </nav>
